--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -1,3 +1,12 @@
+apiVersion: v1
+data:
+  DB_DATABASE_NAME: postgres
+  DB_HOSTNAME: postgres
+  DB_USERNAME: postgres
+  REDIS_HOSTNAME: redis
+  REDIS_PORT: '6379'
+kind: ConfigMap
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
