--- a/argocd/apps/calibre/manifests/deploy.yaml
+++ b/argocd/apps/calibre/manifests/deploy.yaml
@@ -143,7 +143,7 @@ spec:
         app: cloudflareproxy
     spec:
       containers:
-          image: ghcr.io/sarperavci/cloudflarebypassforscraping:latest
+        - image: ghcr.io/sarperavci/cloudflarebypassforscraping:latest
           imagePullPolicy: Always
           name: cloudflareproxy
           ports:
