--- a/argocd/apps/kuma/manifests/ingress.yaml
+++ b/argocd/apps/kuma/manifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: kuma.k8s.yanello.net
+    - host: kuma.yanello.net
       http:
         paths:
           - backend:
