--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -1,116 +1,116 @@
-# # need to be installed one at a time in order
-# ---
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: istio-base
-#   namespace: argocd
-#   finalizers:
-#     - resources-finalizer.argocd.argoproj.io
-# spec:
-#   destination:
-#     name: in-cluster
-#     namespace: istio-system
-#   project: default
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#       - CreateNamespace=true
-#   source:
-#     repoURL: https://istio-release.storage.googleapis.com/charts
-#     targetRevision: "1.24.3"
-#     chart: base
-# ---
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: istiod
-#   namespace: argocd
-#   finalizers:
-#     - resources-finalizer.argocd.argoproj.io
-# spec:
-#   destination:
-#     name: in-cluster
-#     namespace: istio-system
-#   project: default
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#       - CreateNamespace=true
-#   source:
-#     repoURL: https://istio-release.storage.googleapis.com/charts
-#     targetRevision: "1.24.3"
-#     chart: istiod
-#     helm:
-#       valuesObject:
-#         global:
-#           istioNamespace: istio-system
-#           logging:
-#             level: "all:debug"
-#         meshConfig:
-#           ingressService: istio-gateway
-#           ingressSelector: gateway
+# need to be installed one at a time in order
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: istio-base
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    name: in-cluster
+    namespace: istio-system
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+  source:
+    repoURL: https://istio-release.storage.googleapis.com/charts
+    targetRevision: "1.24.2"
+    chart: base
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: istiod
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    name: in-cluster
+    namespace: istio-system
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+  source:
+    repoURL: https://istio-release.storage.googleapis.com/charts
+    targetRevision: "1.24.2"
+    chart: istiod
+    helm:
+      valuesObject:
+        global:
+          istioNamespace: istio-system
+          logging:
+            level: "all:debug"
+        meshConfig:
+          ingressService: istio-gateway
+          ingressSelector: gateway
 
-# ---
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: istio-ingressgateway
-#   namespace: argocd
-#   finalizers:
-#     - resources-finalizer.argocd.argoproj.io
-# spec:
-#   destination:
-#     name: in-cluster
-#     namespace: istio-system
-#   project: default
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#       - CreateNamespace=true
-#   source:
-#     repoURL: https://istio-release.storage.googleapis.com/charts
-#     targetRevision: "1.24.3"
-#     chart: gateway
-#     # helm:
-#     #   valuesObject:
-#     # affinity:
-#     #   nodeAffinity:
-#     #     preferredDuringSchedulingIgnoredDuringExecution:
-#     #       - weight: 1
-#     #         preference:
-#     #           matchExpressions:
-#     #             - key: kubernetes.io/hostname
-#     #               operator: In
-#     #               values:
-#     #                 - marcus-server
-# # ---
-# # apiVersion: argoproj.io/v1alpha1
-# # kind: Application
-# # metadata:
-# #   name: istio-resources
-# #   namespace: argocd
-# #   finalizers:
-# #     - resources-finalizer.argocd.argoproj.io
-# # spec:
-# #   destination:
-# #     name: in-cluster
-# #     namespace: istio-system
-# #   project: default
-# #   syncPolicy:
-# #     automated:
-# #       prune: true
-# #       selfHeal: true
-# #     syncOptions:
-# #       - CreateNamespace=true
-# #   source:
-# #     repoURL: https://github.com/myanello/homelab.git
-# #     targetRevision: HEAD
-# #     path: argocd/apps/infra/istio/resources
-# # ---
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: istio-ingressgateway
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    name: in-cluster
+    namespace: istio-system
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+  source:
+    repoURL: https://istio-release.storage.googleapis.com/charts
+    targetRevision: "1.24.2"
+    chart: gateway
+    helm:
+      valuesObject:
+        affinity:
+          nodeAffinity:
+            preferredDuringSchedulingIgnoredDuringExecution:
+              - weight: 1
+                preference:
+                  matchExpressions:
+                    - key: kubernetes.io/hostname
+                      operator: In
+                      values:
+                        - marcus-server
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: istio-resources
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    name: in-cluster
+    namespace: istio-system
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+  source:
+    repoURL: https://github.com/myanello/homelab.git
+    targetRevision: HEAD
+    path: argocd/apps/infra/istio/resources
+---
