--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -16,6 +16,7 @@ server:
   extraEnvironmentVars:
     VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
     VAULT_ADDR: https://localhost:8200
+    VAULT_CLUSTER_ADDR: https://localhost:8201
   extraVolumes:
     - type: secret
       name: tls-server
@@ -32,26 +33,35 @@ server:
         cluster_name = "vault-integrated-storage"
         listener "tcp" {
           address = "[::]:8200"
-          cluster_address = "[::]:8201"
           tls_cert_file = "/vault/userconfig/vault-letsencrypt/tls.crt"
           tls_key_file = "/vault/userconfig/vault-letsencrypt/tls.key"
         }
+        
+        listener "tcp" {
+          address = "[::]:8202"
+          cluster_address = "[::]:8203"
+          tls_cert_file = "/vault/userconfig/tls-server/tls.crt"
+          tls_key_file = "/vault/userconfig/tls-server/tls.key"
+          tls_client_ca_file = "/vault/userconfig/tls-server/ca.crt"
+          tls_require_and_verify_client_cert = true
+        }
+
         storage "raft" {
           path = "/vault/data"
           retry_join {
-            leader_api_addr = "https://vault-0.vault-internal:8200"
+            leader_api_addr = "https://vault-0.vault-internal:8203"
             leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
           retry_join {
-            leader_api_addr = "https://vault-1.vault-internal:8200"
+            leader_api_addr = "https://vault-1.vault-internal:8203"
             leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
           retry_join {
-            leader_api_addr = "https://vault-2.vault-internal:8200"
+            leader_api_addr = "https://vault-2.vault-internal:8203"
             leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
