--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -33,38 +33,45 @@ server:
         cluster_name = "vault-integrated-storage"
         listener "tcp" {
           address = "[::]:8200"
-          tls_cert_file = "/vault/userconfig/vault-letsencrypt/tls.crt"
-          tls_key_file = "/vault/userconfig/vault-letsencrypt/tls.key"
-        }
-        listener "tcp" {
-          address = "[::]:8202"
-          cluster_address = "[::]:8203"
+          cluster_address = "[::]:8201"
           tls_cert_file = "/vault/userconfig/tls-server/tls.crt"
           tls_key_file = "/vault/userconfig/tls-server/tls.key"
-          tls_client_ca_file = "/vault/userconfig/tls-server/ca.crt"
-          tls_require_and_verify_client_cert = true
         }
+
         storage "raft" {
           path = "/vault/data"
           retry_join {
-            leader_api_addr = "https://vault-0.vault-internal:8203"
-            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
+            leader_api_addr = "https://vault-0.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
           retry_join {
-            leader_api_addr = "https://vault-1.vault-internal:8203"
-            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
+            leader_api_addr = "https://vault-1.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
           retry_join {
-            leader_api_addr = "https://vault-2.vault-internal:8203"
-            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
+            leader_api_addr = "https://vault-2.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
+            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
+            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
+          }
+          retry_join {
+            leader_api_addr = "https://vault-3.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
+            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
+            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
+          }
+          retry_join {
+            leader_api_addr = "https://vault-4.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
         } 
+
   # readinessProbe:
   #   enabled: true
   #   path: "/v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204"
