--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -15,7 +15,7 @@ server:
     enabled: false
   extraEnvironmentVars:
     VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
-    VAULT_ADDR: https://localhost:8200
+    VAULT_API_ADDR: https://localhost:8200
     VAULT_CLUSTER_ADDR: https://localhost:8201
   extraVolumes:
     - type: secret
