--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -14,9 +14,11 @@ server:
   standalone:
     enabled: false
   extraEnvironmentVars:
-    VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
-    VAULT_API_ADDR: https://localhost:8200
-    VAULT_CLUSTER_ADDR: https://localhost:8201
+    #VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
+    - name: VAULT_API_ADDR
+      value: https://localhost:8200
+    - name: VAULT_CLUSTER_ADDR
+      value: https://localhost:8201
   extraVolumes:
     - type: secret
       name: tls-server
