--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -38,6 +38,7 @@ server:
           address = "[::]:8200"
           tls_cert_file = "/vault/userconfig/vault-letsencrypt/tls.crt"
           tls_key_file = "/vault/userconfig/vault-letsencrypt/tls.key"
+          tls_client_ca_file = "/vault/userconfig/tls-server/ca.crt"
         }
         
         # Cluster communication listener with internal cert
