--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -19,7 +19,7 @@ server:
     #   value: https://localhost:8200
     # - name: VAULT_CLUSTER_ADDR
     #   value: https://localhost:8201
-    VAULT_ADDR: https://127.0.0.1:8200
+    #VAULT_ADDR: https://127.0.0.1:8200
   extraVolumes:
     - type: secret
       name: tls-server
@@ -28,7 +28,7 @@ server:
   ha:
     enabled: true
     replicas: 3
-    #apiAddr: https://127.0.0.1:8200
+    apiAddr: https://127.0.0.1:8200
     #clusterAddr: 
     raft:
       enabled: true
