--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -28,8 +28,8 @@ server:
   ha:
     enabled: true
     replicas: 3
-    apiAddr: https://127.0.0.1:8200
-    clusterAddr: https://127.0.0.1:8201
+    # apiAddr: https://127.0.0.1:8200
+    # clusterAddr: https://127.0.0.1:8201
     raft:
       enabled: true
       setNodeId: true
@@ -46,19 +46,7 @@ server:
         storage "raft" {
           path = "/vault/data"
           retry_join {
-            leader_api_addr = "https://vault-0.vault-internal:8201"
-            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
-            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-          }
-          retry_join {
-            leader_api_addr = "https://vault-1.vault-internal:8201"
-            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
-            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-          }
-          retry_join {
-            leader_api_addr = "https://vault-2.vault-internal:8201"
+            leader_api_addr = "https://vault-active:8200"
             leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
