--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -15,10 +15,8 @@ server:
     enabled: false
   extraEnvironmentVars:
     VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
-    # - name: VAULT_API_ADDR
-    #   value: https://localhost:8200
-    # - name: VAULT_CLUSTER_ADDR
-    #   value: https://localhost:8201
+    VAULT_API_ADDR: https://vault-active:8200
+    VAULT_CLUSTER_ADDR: https://vault-active:8201
    #VAULT_ADDR: https://127.0.0.1:8200
   extraVolumes:
     - type: secret
