--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -15,8 +15,8 @@ server:
     enabled: false
   extraEnvironmentVars:
     VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
-    VAULT_API_ADDR: https://vault-active:8200
-    VAULT_CLUSTER_ADDR: https://vault-active:8201
+    # VAULT_API_ADDR: https://vault-active:8200
+    # VAULT_CLUSTER_ADDR: https://vault-active:8201
    #VAULT_ADDR: https://127.0.0.1:8200
   extraVolumes:
     - type: secret
@@ -26,8 +26,8 @@ server:
   ha:
     enabled: true
     replicas: 3
-    # apiAddr: https://127.0.0.1:8200
-    # clusterAddr: https://127.0.0.1:8201
+    apiAddr: https://vault-active:8200
+    clusterAddr: https://vault-active:8201
     raft:
       enabled: true
       setNodeId: true
