--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -74,9 +74,9 @@ server:
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
         } 
-        seal "ocikms" {
-          auth_type_api_key = "true"
-        }
+        # seal "ocikms" {
+        #   auth_type_api_key = "true"
+        # }
   readinessProbe:
     enabled: true
     path: "/v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204"
