--- a/argocd/argocd/manifests/cert.yaml
+++ b/argocd/argocd/manifests/cert.yaml
@@ -6,7 +6,7 @@ spec:
   commonName: argocd.yanello.net
   dnsNames:
   - "argocd.yanello.net"
-  secretName: argocd-letsencrypt
+  secretName: argocd-server-tls
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
