--- a/argocd/infra/cilium/manifests/publicGateway.yaml
+++ b/argocd/infra/cilium/manifests/publicGateway.yaml
@@ -24,8 +24,8 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-        kinds:
-          - kind: HTTPRoute
+        # kinds:
+        #   - kind: HTTPRoute
     - name: http-root
       protocol: HTTP
       hostname: "yanello.net"
@@ -33,8 +33,8 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-        kinds:
-          - kind: HTTPRoute
+        # kinds:
+        #   - kind: HTTPRoute
     - name: https
       protocol: HTTPS
       hostname: "*.yanello.net"
@@ -59,8 +59,8 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-        kinds:
-          - kind: HTTPRoute
+        # kinds:
+        #   - kind: HTTPRoute
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
