--- a/argocd/infra/storage/app-set.yaml
+++ b/argocd/infra/storage/app-set.yaml
@@ -24,6 +24,11 @@ spec:
       destination:
         name: in-cluster
         namespace: "{{path.basename}}"
+      ignoreDifferences:
+        - group: apiextensions.k8s.io/
+          kind: CustomResourceDefinition
+          jsonPointers:
+            - /spec/preserveUnknownFields
       source:
         path: "{{path}}"
         repoURL: https://github.com/myanello/homelab.git
