--- a/argocd/infra/storage/app-set.yaml
+++ b/argocd/infra/storage/app-set.yaml
@@ -25,7 +25,7 @@ spec:
         name: in-cluster
         namespace: "{{path.basename}}"
       ignoreDifferences:
-        - group: apiextensions.k8s.io/
+        - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           jsonPointers:
             - /spec/preserveUnknownFields
